--- a/what.html
+++ b/what.html
@@ -46,7 +46,8 @@
 ._5{width:1.217747px;}
 ._6{width:1174.486516px;}
 .fc2{color:rgb(77,77,79);}
-.fc0{color:rgb(250,250,250);}
+.fc0{color:rgb(250,250,250);    -webkit-text-stroke-width: medium;
+}
 .fc1{color:rgb(0,0,0);}
 .fs4{font-size:15.000000px;}
 .fs1{font-size:44.000100px;}
