--- a/what.html
+++ b/what.html
@@ -33,9 +33,9 @@
 .sc1{text-shadow:-0.015em 0 transparent,0 0.015em transparent,0.015em 0 transparent,0 -0.015em  transparent;}
 @media screen and (-webkit-min-device-pixel-ratio:0){
 .sc_{-webkit-text-stroke:0px transparent;}
-.sc2{-webkit-text-stroke:0.015em rgb(10,59,41);text-shadow:none;}
-.sc0{-webkit-text-stroke:0.015em rgb(0,0,0);text-shadow:none;}
-.sc1{-webkit-text-stroke:0.015em transparent;text-shadow:none;}
+.sc2{-webkit-text-stroke:0.030em rgb(10,59,41);text-shadow:none;}
+.sc0{-webkit-text-stroke:0.030em rgb(0,0,0);text-shadow:none;}
+.sc1{-webkit-text-stroke:0.030em transparent;text-shadow:none;}
 }
 .ws0{word-spacing:0.000000px;}
 ._3{margin-left:-2110.711449px;}
@@ -46,7 +46,7 @@
 ._5{width:1.217747px;}
 ._6{width:1174.486516px;}
 .fc2{color:rgb(77,77,79);}
-.fc0{color:rgb(250,250,250);    -webkit-text-stroke-width: medium;
+.fc0{color:rgb(250,250,250);
 }
 .fc1{color:rgb(0,0,0);}
 .fs4{font-size:15.000000px;}
